--- a/.github/workflows/laravel.yaml
+++ b/.github/workflows/laravel.yaml
@@ -19,7 +19,7 @@ jobs:
           server: ftp.gospelcommunityfellowship.com
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /
+          server-dir: /public_html
 
       - name: Install Composer Dependencies
         run: composer update
